prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     text-align: center;
     background-image: url('../img/bg1.png');
